--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -12,10 +12,10 @@ html{
 }
 
 body{
+  font-family: var(--font-mulish), sans-serif;
   min-height: 100vh;
   font-size:.9375rem;
   line-height: 1.33;
-  font-family: "Plus Jakarta Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   background: var(--color-page-bg);
