--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -1,5 +1,44 @@
 @use "/assets/styles/helpers";
+@import "/assets/styles/sizes.scss";
 
 .header{
-  
+  width: 100%;
+  padding: var(--space-5) var(--space-3);
+  text-align: center;
+
+  @media #{$mq-min-md}{
+    padding: var(--space-10);
+    text-align: unset;
+    display: flex;
+    align-items: center;
+  }
+
+  &__logo{
+    flex: 1;
+  }
+  img{
+    width: min( 100%, 200px );
+  }
+  &__nav{
+    ul {
+      padding:0;
+      list-style-type: none;
+      gap: var(--space-4);
+      @media #{$mq-min-md}{
+        display: flex;
+      }
+    }
+    li{
+      display: inline-block;
+    }
+    a{
+      font-family: var(--font-firasans), serif;
+      font-size: helpers.rem(20);
+      font-weight: 600;
+      padding: var(--space-2);
+      @media #{$mq-min-md}{
+
+      }
+    }
+  }
 }
