--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -4,7 +4,7 @@
   // colors
   --color-anchor:  #0068d7;
   --color-anchor-hover:  #0054ae;
-
+  --color-border: #d7d7d7;
   /* 
   --highlight-text: #ccffd2;
 
