--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,3 +1,4 @@
+@import "/assets/styles/sizes.scss";
 html{
   box-sizing: border-box;
   -moz-osx-font-smoothing: grayscale;
@@ -23,3 +24,21 @@ body{
   margin: 0;
   padding: 0;
 }
+
+main{
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+  padding: var(--space-5) var(--space-3);
+  text-align: left;
+  @media #{$mq-min-md}{
+    padding: var(--space-10);
+  }
+}
+
+img{
+  width: 100%;
+  height: auto;
+}
+
+
