--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -22,17 +22,20 @@ body{
   background: var(--color-page-bg);
   color: var(--color-primary-text);
   margin: 0;
-  padding: 0;
+  padding: 0 var(--space-3);
+  @media #{$mq-min-md}{
+    padding: 0 var(--space-10);
+  }
 }
 
 main{
   margin: 0 auto;
   width: 100%;
-  max-width: 1200px;
-  padding: var(--space-5) var(--space-3);
+  max-width: var(--size-page-width);
+  padding: var(--space-5) 0;
   text-align: left;
   @media #{$mq-min-md}{
-    padding: var(--space-10);
+    padding: var(--space-10) 0;
   }
 }
 
