--- a/components/atoms/date/date.scss
+++ b/components/atoms/date/date.scss
@@ -1,5 +1,7 @@
 @use "/assets/styles/helpers";
 
 .date{
-  
+  font-size: helpers.rem(14);
+  display: block;
+  color: var(--color-secondary-text);
 }
