--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -1,5 +1,10 @@
 @use './helpers.scss';
 
+h1{
+  font-size: helpers.rem(36);
+  font-weight: 700;
+}
+
 a{
   text-decoration: none;
   color: var(--color-anchor);
@@ -11,3 +16,13 @@ a{
   }
 }
 
+p{
+  font-size: helpers.rem(18);
+  line-height: 1.5;
+}
+code{
+  padding: var(--space-4);
+  white-space: pre-wrap;
+  background: var(--color-bg-surface-secondary);
+  display: inline-block;
+}
