--- a/components/templates/post/post.scss
+++ b/components/templates/post/post.scss
@@ -4,4 +4,12 @@
   width: 100%;
   margin: 0 auto;
   max-width: var(--size-page-width);
+
+  &__title{
+    margin:0;
+  }
+
+  &__headline{
+    margin-bottom: var(--space-5);
+  }
 }
