--- a/plop-templates/component/reactfc.hbs
+++ b/plop-templates/component/reactfc.hbs
@@ -4,7 +4,7 @@ import './{{lowerCase name}}.scss'
  * {{name}} description goes here
  */
 
-export const {{name}}: React.FC<{props}>= ({props}) => {
+const {{name}}: React.FC<{props}>= ({props}) => {
   return (
     <div className="{{ lowerCase name }}">
       This is {{ name }} 
