Add SizeContainer component.

--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -12,15 +12,18 @@
   --color-border-secondary: #eeeeee;
   // --color-bg-surface: #fff;
   --color-bg-surface-secondary: #f7f7f7;
-  
-  // sizes
-  --size-page-width: 1200px;
 
   // spacing
   --space-3: 12px;
   --space-5: 20px;
   --space-10: 40px;
   --space-20: 80px;
+  --space-250: 1000px;
+  
+  // sizes
+  --size-container-300: 1200px;
+  --size-container-200: 800px;
+
 
   --transition-duration: 0.25s;
 
