--- a/components/templates/post/post.scss
+++ b/components/templates/post/post.scss
@@ -3,7 +3,7 @@
 .post{
   width: 100%;
   margin: 0 auto;
-  max-width: var(--size-page-width);
+  max-width: var(--size-container-300);
 
   &__headline{
     margin-bottom: var(--space-5);
