--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -32,7 +32,7 @@ body{
 main{
   margin: 0 auto;
   width: 100%;
-  max-width: var(--size-page-width);
+  max-width: var(--size-container-300);
   padding: var(--space-5) 0;
   text-align: left;
   @media #{$mq-min-md}{
