--- a/plop-templates/component/storybook.hbs
+++ b/plop-templates/component/storybook.hbs
@@ -12,7 +12,7 @@ export default meta;
 type Story = StoryObj<typeof {{ name }}>;
 
 export const Default: Story = {
-  name: '{{ name }}',
+  name: 'Default',
   args: {
     // Add default values here
   },
