--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -3,6 +3,7 @@
   
   // colors
   --color-anchor:  #0068d7;
+  --color-anchor-light: #bedcfc;
   --color-anchor-hover:  #0054ae;
   --color-headline-text: #222;
   --color-primary-text: #444;
@@ -14,8 +15,12 @@
   --color-bg-surface-secondary: #f7f7f7;
 
   // spacing
+  --space-1: 4px;
+  --space-2: 8px;
   --space-3: 12px;
+  --space-4: 16px;
   --space-5: 20px;
+  --space-8: 32px;
   --space-10: 40px;
   --space-20: 80px;
   --space-250: 1000px;
