Custom error message.

--- a/app/base.scss
+++ b/app/base.scss
@@ -1,4 +1,5 @@
 @use '../assets/styles/helpers.scss';
 @use '../assets/styles/base.scss';
+@use '../assets/styles/utils.scss';
 @use '../assets/styles/text.scss';
 @use '../assets/styles/form.scss';
