--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -31,6 +31,7 @@
   
   // sizes
   --size-container-300: 1200px;
+  --size-container-main: var(--size-container-300);
   --size-container-200: 800px;
 
 
