--- a/components/organisms/contactform/contactform.scss
+++ b/components/organisms/contactform/contactform.scss
@@ -1,5 +1,8 @@
 @use "/assets/styles/helpers";
 
 .contactform{
-  
+  margin: var(--space-20) auto 0;
+  &__form{
+    margin: var(--space-5) auto 0;
+  }
 }
