--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -25,7 +25,6 @@ h3{
 a{
   text-decoration: none;
   color: var(--color-anchor);
-  transition: var(--transition);
   transition-duration: var(--transition-duration);
   &:hover{
     text-decoration: underline;
@@ -43,4 +42,13 @@ code{
   white-space: pre-wrap;
   background: var(--color-bg-surface-secondary);
   display: inline-block;
+}
+
+ul{
+  padding:0 0 0 1rem;
+}
+
+li p{
+  margin:0;
+  padding:0;
 }
