Drop subgrid for now

--- a/components/organisms/projectcard/projectcards.scss
+++ b/components/organisms/projectcard/projectcards.scss
@@ -12,9 +12,9 @@
     border-radius: 2px;
     overflow: hidden;
     display: grid;
-    grid-template-rows: subgrid;
-    grid-row: span 3;
-    grid-gap: 0;
+    // grid-template-rows: subgrid;
+    // grid-row: span 3;
+    // grid-gap: 0;
 
     &:hover, &:focus{
       background: #ebf5ff;
