--- a/components/organisms/projectcard/projectcards.scss
+++ b/components/organisms/projectcard/projectcards.scss
@@ -12,9 +12,8 @@
     border-radius: 2px;
     overflow: hidden;
     display: grid;
-    // grid-template-rows: subgrid;
-    // grid-row: span 3;
-    // grid-gap: 0;
+    grid-row: span 3;
+    grid-gap: 0;
 
     &:hover, &:focus{
       background: #ebf5ff;
@@ -23,12 +22,20 @@
     }
   }
   &__content{
+    background: rgba(255, 0, 0, 0.1);
     display: grid;
     padding: var(--space-5);
     grid-template-rows: subgrid;
     grid-row: span 2;
-    
+   > span:nth-of-type(1){
+      background: rgba(0, 255, 0, 0.1);
+    }  
+   > span:nth-of-type(2){
+      background: rgba(0, 0, 255, 0.1);
+    }  
   }
+
+
 
   &__subtitle{
     font-size: helpers.rem(14);
