--- a/components/organisms/projectcard/projectcards.scss
+++ b/components/organisms/projectcard/projectcards.scss
@@ -10,10 +10,10 @@
     color: var(--color-text-primary);
     cursor: pointer;
     border-radius: 2px;
-    overflow: hidden;
     display: grid;
-    grid-row: span 3;
+    grid-row: span 2;
     grid-gap: 0;
+    grid-template-rows: subgrid;
 
     &:hover, &:focus{
       background: #ebf5ff;
@@ -21,12 +21,19 @@
       text-decoration: none;
     }
   }
+  img{
+    display:block;
+  }
+
   &__content{
     background: rgba(255, 0, 0, 0.1);
-    display: grid;
     padding: var(--space-5);
-    grid-template-rows: subgrid;
     grid-row: span 2;
+    grid-gap: 0;
+    grid-template-rows: subgrid;
+    span{
+      width: 100%;
+    }
    > span:nth-of-type(1){
       background: rgba(0, 255, 0, 0.1);
     }  
@@ -34,8 +41,6 @@
       background: rgba(0, 0, 255, 0.1);
     }  
   }
-
-
 
   &__subtitle{
     font-size: helpers.rem(14);
