--- a/components/organisms/projectcard/projectcards.scss
+++ b/components/organisms/projectcard/projectcards.scss
@@ -11,7 +11,7 @@
     cursor: pointer;
     border-radius: 2px;
     display: grid;
-    grid-row: span 2;
+    grid-row: span 3;
     grid-gap: 0;
     grid-template-rows: subgrid;
 
@@ -21,27 +21,17 @@
       text-decoration: none;
     }
   }
-  img{
-    display:block;
-  }
 
-  &__content{
-    background: rgba(255, 0, 0, 0.1);
-    padding: var(--space-5);
-    grid-row: span 2;
-    grid-gap: 0;
-    grid-template-rows: subgrid;
-    span{
-      width: 100%;
+  &__headline{
+    padding: var(--space-5) var(--space-5) 0;
+  }
+  &__description{
+    padding: var(--space-3) var(--space-5) var(--space-5);
+    p{
+      padding:0;
+      margin:0;
     }
-   > span:nth-of-type(1){
-      background: rgba(0, 255, 0, 0.1);
-    }  
-   > span:nth-of-type(2){
-      background: rgba(0, 0, 255, 0.1);
-    }  
   }
-
   &__subtitle{
     font-size: helpers.rem(14);
   }
