--- a/assets/styles/text.scss
+++ b/assets/styles/text.scss
@@ -44,3 +44,12 @@ code{
   background: var(--color-bg-surface-secondary);
   display: inline-block;
 }
+
+ul{
+  padding:0 0 0 1rem;
+}
+
+li p{
+  margin:0;
+  padding:0;
+}
