--- a/components/organisms/projectcard/projectcards.scss
+++ b/components/organisms/projectcard/projectcards.scss
@@ -21,12 +21,19 @@
       text-decoration: none;
     }
   }
+  &__body{
+    padding: var(--space-5);
+  }
 
   &__headline{
-    padding: var(--space-5) var(--space-5) 0;
+    display: inline-block;
+    background: rgba(255, 0, 0, 0.1);
   }
+  
   &__description{
-    padding: var(--space-3) var(--space-5) var(--space-5);
+    display: inline-block;
+    padding: var(--space-3) 0 0 0;
+    background: rgba(0, 255, 0, 0.1);
     p{
       padding:0;
       margin:0;
