--- a/assets/styles/utils.scss
+++ b/assets/styles/utils.scss
@@ -2,6 +2,12 @@
   display: none;
 }
 
+.vertical-horizontal-center{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .error-text{
   font-size: 1.5rem;
   font-weight: 700;
