Add structured data

--- a/components/atoms/date/date.scss
+++ b/components/atoms/date/date.scss
@@ -1,7 +1,7 @@
 @use "/assets/styles/helpers";
 
 .date{
-  font-size: helpers.rem(14);
-  display: block;
+  // font-size: helpers.rem(14);
+  // display: inline-block;
   color: var(--color-secondary-text);
 }
