Add new variant to size container.

--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -28,14 +28,13 @@
   --space-10: 40px;
   --space-15: 60px;
   --space-20: 80px;
+  --space-125: 500px;
   --space-250: 1000px;
   
   // sizes
   --size-container-300: 1200px;
   --size-container-main: var(--size-container-300);
   --size-container-200: 800px;
-
-
   --transition-duration: 0.25s;
   --transition-duration-fast: 0.125s;
 
