--- a/components/organisms/header/header.scss
+++ b/components/organisms/header/header.scss
@@ -3,26 +3,25 @@
 
 .header{
   width: 100%;
-  padding: var(--space-5) var(--space-3);
+  padding: var(--space-5) var(--space-5);
   text-align: center;
   gap:var(--space-3);
   display:flex;
   flex-direction: column;
   @media #{$mq-min-md}{
-    padding: var(--space-10) 0;
+    padding: var(--space-10) var(--space-5);
     text-align: unset;
     display: flex;
     flex-direction: row;
   }
 
   img{
-    width: min( 100%, 200px );
+    width: 200px;
     display: block;
     margin: 0 auto;
   }
-
   &__nav{        
-    flex: 1;
+    flex-grow: 1;
     @media #{$mq-min-md}{
       text-align: right;
     }
