--- a/components/organisms/header/header.scss
+++ b/components/organisms/header/header.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   display: flex;
   flex-direction: row;
+  align-items: center;
   @media #{$mq-min-md}{
     padding: var(--space-10) var(--space-5);
   }
