--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -1,6 +1,6 @@
 :root{
 
-  
+  color-scheme: light dark; // default
   // colors
   --color-anchor:  light-dark(#0068d7, #bedcfc);
   --color-anchor-light: #bedcfc;
@@ -8,11 +8,11 @@
   --color-headline-text: light-dark(#222, #fff);
   --color-primary-text: light-dark(#222, #fff);
   --color-secondary-text: light-dark(#707070, #eee);
-  --color-page-bg: light-dark(#fff, #222);
+  --color-page-bg: light-dark(#fff, #242323);
 
-  --color-border: #d7d7d7;
+  --color-border: light-dark(#d7d7d7, #9b9b9b);
   --color-border-hover: #aaa;
-  --color-border-focus: #333;
+  --color-border-focus:  light-dark(#333, #ddd);
   --color-border-secondary: #eeeeee;
   --color-bg-surface-secondary: #f7f7f7;
   --color-error: #d61c19;
