--- a/components/organisms/projectcard/projectcards.scss
+++ b/components/organisms/projectcard/projectcards.scss
@@ -1,12 +1,13 @@
 @use "/assets/styles/helpers";
 
 .projectcards{
+
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: var(--space-10);
   max-width: var(--size-container-300);
   &__card{
-    --border-color: rgb(253, 238, 209);
+    --border-color:light-dark(#fdeed1, #96886e);
     color: var(--color-text-primary);
     cursor: pointer; 
     border-radius: 3px;
@@ -17,7 +18,7 @@
     gap: 0;
 
     &:hover, &:focus{
-      background: #ebf5ff;
+      background: light-dark(#ebf5ff, #002346);
       color: var(--color-text-primary);
       text-decoration: none;
       --border-color: #57a7f7;
@@ -33,10 +34,6 @@
     border-width: 0 1px 1px;
     border-style: dotted;
     border-color: var(--border-color);
-  }
-
-  &__headline{
-    // background: rgba(255, 0, 0, 0.1);
   }
 
   &__description{
