Add light/dark mode to storybook

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -6,6 +6,10 @@ html{
   text-rendering: geometricPrecision;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  color-scheme: light; 
+  &.dark{
+    color-scheme: dark; 
+  }
 }
 
 *, *::before, *::after {
