--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -1,6 +1,6 @@
 :root{
 
-  color-scheme: light dark; // default
+  // color-scheme: light dark; // default
   // colors
   --color-anchor:  light-dark(#0068d7, #bedcfc);
   --color-anchor-light: #bedcfc;
