Update dark mode link colors

--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -2,7 +2,7 @@
 
   // color-scheme: light dark; // default
   // colors
-  --color-anchor:  light-dark(#0068d7, #bedcfc);
+  --color-anchor:  light-dark(#0068d7, #3D94FF);
   --color-anchor-light: #bedcfc;
   --color-anchor-hover:  light-dark(#0054ae, #80b8f5);;
   --color-headline-text: light-dark(#222, #fff);
