Add autocomplete attributes to form

--- a/assets/styles/utils.scss
+++ b/assets/styles/utils.scss
@@ -14,4 +14,12 @@
   color: var(--color-error);
 }
 
-
+.visually-hidden{ // visible to screenreaders, but not visually
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
