Dark mode for code block

--- a/assets/styles/vars.scss
+++ b/assets/styles/vars.scss
@@ -14,7 +14,7 @@
   --color-border-hover: #aaa;
   --color-border-focus:  light-dark(#333, #ddd);
   --color-border-secondary: #eeeeee;
-  --color-bg-surface-secondary: #f7f7f7;
+  --color-bg-surface-secondary: light-dark(#f7f7f7, #333);
   --color-error: #d61c19;
 
   --color-dark-mode-hover: light-dark(#0054ae, #fff56f);
