Add last published date to the body of posts

--- a/components/templates/post/post.scss
+++ b/components/templates/post/post.scss
@@ -8,4 +8,9 @@
   &__headline{
     margin-bottom: var(--space-5);
   }
+
+  &__dateprefix{
+    font-size: helpers.rem(14);
+    color: var(--color-secondary-text);
+  }
 }
